--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,18 @@ description:
 baseurl    : "/Boba-Fett-Theme-For-Jekyll"
 url        : "http://www.leoderbois.com/Boba-Fett-Theme-For-Jekyll/"
 
+
+metadata: ["Leo Derbois","github","jekyll","jekyllrb","resume","CV","Boba Fett"]
 ############################# Personnal Inforamtions ################################
 
 name   : Boba Fett
 summary: Intergalactic Hit Man 
-quote  : I was born to kill people. My father give all is own experience to be the best hitman existing in all galaxy
+quote  : "kill and kidnap people are all my life. My father selects me because was the best in a million of sons. I was made and educate to kill, kidnap and guard your body like nobody can do better than me !"
 phone  : +33 06 71 82 84 56
 
 # Where you leave ?
 street : 45 Wookies street
-city   : Death Star			
+city   : Kamino			
 zipcode: 45002				
 
 
@@ -45,10 +47,12 @@ hobbies: ["Pod Racer Competition", "Computer Sciences","Women","Cooking for frie
 # Kills
 #if you remove this, articles with 'skills' category are considerated
 skills:
-- name: Guns Used
+- name: Weapons
   values: ["Blasters","Heavy ranged","Melee"]
-- name: Guns Used
-  values: ["Blasters","Heavy ranged","Melee"]
+- name: Spacecraft
+  values: ["Slave I & II","A-WING FIGHTER","AAT BATTLE TANK"]
+- name: Cooking specialties
+  values: ["Cookies","Asian food","Snails"]
 
 # Inforamtions
 informations-custom:
@@ -60,8 +64,8 @@ informations-custom:
 
 speaking-langugages: ["Mandalorian (native)","Huttese (professionnal)","Wookie (bases)"]
 
-# PDF
-resume_pdf: http://link.com/cv.pdf
+# PDF version of your resume 
+resume_pdf: http://inft.ly/k2FShYv.png
 
 
 ############################# Build setting (don't touch!) ################################
