--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 # Site settings
-title      : Boba Fett's resume
-email      : boba@deathstar.gal
-description: 
-baseurl    : "/Boba-Fett-Theme-For-Jekyll"
-url        : "http://leoderbois.github.io/Boba-Fett-Theme-For-Jekyll/"
+title      : Boba Fett's resume #title of the resume - for browser
+email      : boba@deathstar.gal # your email 
+description: # Not used
+baseurl    : "/Boba-Fett-Theme-For-Jekyll" # Github subfolder for project. If is your main git put ""
+url        : "http://leoderbois.github.io/Boba-Fett-Theme-For-Jekyll/"  # Url of your site 
 
 
-metadata: ["Leo Derbois","github","jekyll","jekyllrb","resume","CV","Boba Fett"]
+metadata: ["Leo Derbois","github","jekyll","jekyllrb","resume","CV","Boba Fett"] # Metadata for 
+# If you want to analyse your site  with google analytics (code like UA-5293-1)
+googleAnalyticsID:  
 ############################# Personnal Inforamtions ################################
-
-name   : Boba Fett
-summary: Intergalactic Hit Man 
-quote  : "kill and kidnap people are all my life. My father selects me because was the best in a million of sons. I was made and educate to kill, kidnap and guard your body like nobody can do better than me !"
-phone  : +33 06 71 82 84 56
+name   : Boba Fett #Your name
+summary: Intergalactic Hit Man # a simple sentence about you
+quote  : "kill and kidnap people are all my life. My father selects me because was the best in a million of sons. I was made and educate to kill, kidnap and guard your body like nobody can do better than me !" # a quote about you
+phone  : +33 06 71 82 84 56 # your phone number
 
 # Where you leave ?
 street : 45 Wookies street
@@ -21,9 +22,10 @@ zipcode: 45002
 
 
 # if you have a site or a custom blog
-blog_name: Boba Fett At School
+blog_name: Boba Fett At School 
 blog_url : http://www.osxbricks.com
 
+# your social informations
 linkedin: bobafett # linkedin username
 google  : bobafett # google username
 github  : bobafett # github username
@@ -32,19 +34,19 @@ facebook: bobafett # facebook username
 
 
 ############################# Site Options ################################
-favicon         : /assets/bobafett.ico 		# Favicon website / Need to be local (in assets forlder)
+favicon         : /assets/bobafett.ico 		# website Favicon  / Need to be local (in assets forlder)
 avatar          : /assets/bobafett.jpg 		# Avatar/photo  / Need to be local (in assets forlder)
 panel_background: /assets/slave_one.png 	# panel background images / Need to be local (in assets folder)
-enable_ribbon   : yes 						# remove this line to remove the ribbon
+enable_ribbon   : yes 						# remove this line to remove the github ribbon 
 
 
 ############################ Resume Content ################################
-# Hobbies
+# Your Hobbies
 #if you remove this, articles with 'hobbies' category are considerated
 hobbies: ["Pod Racer Competition", "Computer Sciences","Women","Cooking for friends"]
 
 
-# Kills
+# Your Kills
 #if you remove this, articles with 'skills' category are considerated
 skills:
 - name: Weapons
@@ -54,7 +56,7 @@ skills:
 - name: Cooking specialties
   values: ["Cookies","Asian food","Snails"]
 
-# Inforamtions
+# Some inforamtions you want to add
 informations-custom:
 - text: Space ship drive Licence + vehicle
   logo: space-shuttle
@@ -62,9 +64,10 @@ informations-custom:
   logo: spoon
 - text: Have a lot of guns
 
+# Languages you speak (put your level in parentheses)
 speaking-langugages: ["Mandalorian (native)","Huttese (professionnal)","Wookie (bases)"]
 
-# PDF version of your resume 
+# a link to your PDF version of the remuse. If you remove, the button will disappear. 
 resume_pdf: http://inft.ly/k2FShYv.png
 
 
@@ -74,4 +77,4 @@ permalink: pretty
 
 ############################# Plugins ################################
 
-# RAS
+# No plugin
