--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ informations-custom:
 speaking-langugages: ["Mandalorian (native)","Huttese (professionnal)","Wookie (bases)"]
 
 # a link to your PDF version of the remuse. If you remove, the button will disappear. 
-resume_pdf: http://inft.ly/k2FShYv.png
+resume_pdf: http://cl.ly/3c3a3F2v0a0v/download/boba_fett.pdf
 
 
 ############################# Build setting (don't touch!) ################################
