--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ googleAnalyticsID:
 ############################# Personnal Inforamtions ################################
 name   : Boba Fett #Your name
 summary: Intergalactic Hit Man # a simple sentence about you
-quote  : "kill and kidnap people are all my life. My father selects me because was the best in a million of sons. I was made and educate to kill, kidnap and guard your body like nobody can do better than me !" # a quote about you
+quote  : "killing and kidnaping people is all my life. My father selected me because I was the best of a million of sons. I was made and educated to kill, kidnap and guard your body like nobody can do !" # a quote about you
 phone  : +33 06 71 82 84 56 # your phone number
 
 # Where you leave ?
