Add Custom CSS in option

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ url        : "http://bobafett.leoderbois.com"  # Url of your site
 
 metadata: ["Leo Derbois","github","jekyll","jekyllrb","resume","CV","Boba Fett"] # Metadata for 
 # If you want to analyse your site  with google analytics (code like UA-5293-1)
-googleAnalyticsID:  
+googleAnalyticsID: 
+#custom-css: /css/leoderbois.css # CSS with import main.less or not, to customise or override some properties
+
 ############################# Personnal Inforamtions ################################
 name   : Boba Fett #Your name
 summary: Intergalactic Hit Man # a simple sentence about you
