--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title      : Boba Fett's resume #title of the resume - for browser
 email      : boba@deathstar.gal # your email 
-description: "Boba Fett CV a resume theme for Jekyll" #Meta description
+description: # Not used
 baseurl    : "" # Github subfolder for project . If is your main git or you use a CNAME put ""
 url        : "http://bobafett.leoderbois.com"  # Url of your site 
 
@@ -16,7 +16,7 @@ googleAnalyticsID:
 SEO_GOOGLEPUBLISHER: #+YourName
 SEO_LOCAL: en_US
 #SEO_Title <- title
-#SEO_DESCRIPTION 
+#SEO_DESCRIPTION  <- description
 #SEO_URL <- site.url
 #SEO_site_name <-title
 SEO_IMAGE: /assets/bobafett.jpg
