--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ googleAnalyticsID:
 
 
 #### SEO Informations ####
-SEO_GOOGLEPUBLISHER: #+YourName
+SEO_GOOGLEPUBLISHER: +LéoDerbois #+YourName
 SEO_LOCAL: en_US
 #SEO_Title <- title
 #SEO_DESCRIPTION  <- summary
