Add Google analytics ID

--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ url        : "http://bobafett.leoderbois.com"  # Url of your site
 
 metadata: ["Leo Derbois","github","jekyll","jekyllrb","resume","CV","Boba Fett"] # Metadata for 
 # If you want to analyse your site  with google analytics (code like UA-5293-1)
-googleAnalyticsID: 
+googleAnalyticsID: UA-54776487-1
 #custom-css: /css/leoderbois.css # CSS with import main.less or not, to customise or override some properties
 
 
 #### SEO Informations ####
-SEO_GOOGLEPUBLISHER: +LéoDerbois #+YourName
+SEO_GOOGLE_PUBLISHER: +LéoDerbois #+YourName
 SEO_LOCAL: en_US
 #SEO_Title <- title
 #SEO_DESCRIPTION  <- summary
