--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ name   : Boba Fett #Your name
 summary: Intergalactic Hit Man # a simple sentence about you
 quote  : "killing and kidnaping people is all my life. My father selected me because I was the best of a million of sons. I was made and educated to kill, kidnap and guard your body like nobody can do !" # a quote about you
 phone  : +33 06 71 82 84 56 # your phone number
-
+vcard  : /assets/leoderbois.vcf 
 # Where you leave ?
 street : 45 Wookies street
 city   : Kamino			
